--- a/templates/torrent_info_torrent.html
+++ b/templates/torrent_info_torrent.html
@@ -80,7 +80,7 @@
         e.preventDefault();
         torrent_url = document.getElementById("torrent_url").value;
         if (!torrent_url.startsWith("http")) {
-            $.notify('<strong>올바른 마그넷 주소를 입력하세요!</strong>', {
+            $.notify('<strong>올바른 토렌트 주소를 입력하세요!</strong>', {
                 type: 'warning'
             });
             return;
