--- a/templates/torrent_info_magnet.html
+++ b/templates/torrent_info_magnet.html
@@ -1,33 +1,50 @@
 {% extends "base.html" %} {% block content %}
 
-<form>
+<form id="results-before">
     <div class="form-group mt-3">
         <label for="magnet_uri">마그넷 주소</label>
         <input type="url" class="form-control" id="magnet_uri" aria-describedby="urlhelp" placeholder="">
         <small id="urlhelp" class="form-text text-muted">magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요.</small>
     </div>
-    <button id="get_magnet_info_btn" name="get_magnet_info_btn" class="btn btn-sm btn-outline-success mb-1">정보 가져오기</button>
+    <button id="get_magnet_info_btn" name="get_magnet_info_btn" class="btn btn-sm btn-outline-success mb-1">가져오기</button>
 </form>
-
-<div id="summary_card" class="card mt-3 mb-3">
-    <div class="card-header">토렌트 정보
-        <a href="#" id="torrent_file" class="card-link ml-2"></a>
-    </div>
-    <div class="card-body">
-        <p id="etime" class="card-text mt-0 mb-1 text-sm-right small text-muted"></p>
-        <div class="collapse" id="div_torrent_info"></div>
-    </div>
-</div>
 <!--전체-->
-
 
 
 <script type="text/javascript">
     var package_name = 'torrent_info';
     var current_info = null;
+    const result_li_div = '<div class="card mt-3 mb-3" id="results-li"></div>';
+
+    $(document).ready(function() {
+
+        $(function() {
+            $.ajax({
+                url: '/' + package_name + '/api/cached_info',
+                type: "POST",
+                cache: false,
+                data: {},
+                dataType: "json",
+                success: function(data) {
+                    if (data.success) {
+                        if (data.info.length) {
+                            data.info.forEach(function(element){ 
+                                update_single_result(element, false); 
+                            });
+                        }
+                    }
+                }
+            });
+        });
+
+    });
 
     $("body").on('click', '#get_magnet_info_btn', function(e) {
         e.preventDefault();
+        get_magnet_info();
+    });
+
+    function get_magnet_info() {
         magnet_uri = document.getElementById("magnet_uri").value;
         if (!magnet_uri.startsWith("magnet:?xt=urn:btih:")) {
             $.notify('<strong>올바른 마그넷 주소를 입력하세요!</strong>', {
@@ -45,8 +62,7 @@
             dataType: "json",
             success: function(data) {
                 if (data.success) {
-                    current_info = data.info;
-                    show_info(data.info);
+                    update_single_result(data.info);
                 } else {
                     $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
                         type: 'warning'
@@ -54,19 +70,63 @@
                 }
             }
         });
+    }
+
+
+    function update_single_result(data, show_info=true) {
+        let torrent_file_name = data.name + '.torrent';
+        let torrent_file_href = data.info_hash;
+        let etime = ("time_metadata" in data) ? data.time_metadata : null;
+        if ( !etime ) etime += Number(("time_scrape" in data) ? data.time_scrape : 0);
+        str = `
+        <div class="card-header" id="item-header">
+            <div class="d-flex w-100 justify-content-between">
+                <h7 class="text-truncate" style="flex: 1;">
+                    <a href="${torrent_file_href}" id="torrent_file">${torrent_file_name}</a>
+                </h7>
+                <small text-muted>${etime ? etime.toFixed(3) : '-'} 초</small>
+            </div>
+        </div>
+        <ul class="list-group list-group-flush collapse${show_info ? ' show' : ''}">
+            <li class="list-group-item">
+                <pre>${JSON.stringify(data, null, 2)}</pre>
+            </li>
+        </ul>
+        `
+        if (!$("#results-li").length) {
+            $("#results-before").after(result_li_div);
+        }
+        $("#results-li").prepend(str);
+    }
+    
+    $("body").on('click', '#item-header', function(e) {
+        {# $(this).next('ul').children('li').toggle(); #}
+        $(this).next('ul').toggle();
     });
 
-    function show_info(data) {
-        // make a link to torrent_file
-        document.getElementById("torrent_file").innerHTML = data.name + '.torrent';
-        $('#torrent_file').prop('href', '/' + package_name + '/api/download_torrent?hash=' + data.info_hash);
-        // elapsed time
-        let etime = data.time_metadata + Number(("time_scrape" in data) ? data.time_scrape : 0);
-        document.getElementById("etime").innerHTML = '걸린 시간: ' + etime.toFixed(3) + '초';
-        // torrent_info
-        document.getElementById("div_torrent_info").innerHTML = "<pre>" + JSON.stringify(data, null, 2) + "</pre>";
-        $('#div_torrent_info').collapse('show');
-    }
+    $("body").on('click', '#torrent_file', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $.ajax({
+            url: '/' + package_name + '/api/download_torrent',
+            type: "POST",
+            cache: false,
+            data: {
+                hash: $(this).attr('href')
+            },
+            dataType: "json",
+            success: function(data) {
+                if (data.success) {
+                    window.location = data.download_url;
+                } else {
+                    $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
+                        type: 'warning'
+                    });
+                }
+            }
+        });
+    })
+
 </script>
 
 
