--- a/templates/torrent_info_setting.html
+++ b/templates/torrent_info_setting.html
@@ -6,14 +6,14 @@
     </nav>
     <div class="tab-content" id="nav-tabContent">
         <!-- 일반 -->
-        {{ macros.m_tab_content_start('일반', true) }} 
-        {# {{ macros.setting_global_scheduler_button(arg['scheduler'], arg['is_running']) }} #}
+        {{ macros.m_tab_content_start('일반', true) }}
         <form id="setting" name="setting">
             {{ macros.setting_button_with_info([['install_btn', '설치하기']], 'libtorrent 설치', 'x86_64 alpine 도커만 지원. 네이티브라면 직접 설치 후 새로고침 해 보세요.') }}
             {{ macros.setting_checkbox('use_dht', 'DHT 사용', value=arg['use_dht'], desc='트래커 없이도 정보를 받아오지만 iknowwhatyoudownload.com에 노출될 수 있습니다.') }}
             {{ macros.setting_checkbox('scrape', 'Scrape 사용', value=arg['scrape'], desc='피어 정보도 받아옵니다. 활성 토렌트인지 확인할 때 유용. 대신 오래 걸림.') }}
             {{ macros.setting_input_int('timeout', '시간 초과', value=arg['timeout'], min='1', placeholder='30', desc='마그넷 정보를 받아올때 너무 오래 걸리면 중지합니다. 단위: 초') }}
-            {{ macros.setting_input_int('cache_size', '캐시 크기', value=arg['cache_size'], min='1', placeholder='10', desc='최근 검색한 마그넷 정보를 info_hash 기준으로 저장합니다. 단위: 개') }}
+            {{ macros.setting_input_int('cache_size', '검색 결과 저장', value=arg['cache_size'], min='0', max='256', placeholder='10', desc='최근 검색 결과를 info_hash 기준으로 저장합니다. 단위: 갯수') }}
+            {{ macros.setting_button_with_info([['clear_cache_btn', '재설정']], '검색 결과 비우기', '') }}
             {{ macros.setting_button([['global_setting_save_btn', '저장']]) }}
         </form>
 
@@ -28,8 +28,6 @@
 
 <script type="text/javascript">
     var package_name = 'torrent_info';
-    var current_data = null;
-    var default_interface_id = "{{arg['default_interface_id']}}"
 
     $(document).ready(function() {
 
@@ -44,27 +42,25 @@
                     if (data.installed) {
                         $('#install_btn').prop('disabled', true);
                         $('#install_btn').html('설치됨');
-                        $('#install_btn').parent().next().html('libtorrent v' + data.version);
+                        $('#install_btn').parent().next().html('<em>libtorrent v' + data.version + '</em>');
                     }
                 }
             });
         });
 
-    });
-
-    // 스케쥴링 on / off
-    $('#scheduler').change(function() {
-        var ret = $(this).prop('checked');
-        $.ajax({
-            url: '/' + package_name + '/ajax/scheduler',
-            type: "POST",
-            cache: false,
-            data: {
-                scheduler: ret
-            },
-            dataType: "json",
-            success: function(list) {}
+        $(function() {
+            $.ajax({
+                url: '/' + package_name + '/ajax/cache',
+                type: "POST",
+                cache: false,
+                data: {},
+                dataType: "json",
+                success: function(data) {
+                    update_cache_status(data);
+                }
+            });
         });
+
     });
 
     // libtorrent 설치 버튼
@@ -88,6 +84,35 @@
             }
         });
     });
+
+    // 캐시 현황 업데이트
+    function update_cache_status(data) {
+        if (data.success) {
+            $('#clear_cache_btn').parent().next().html(
+                '<em>현재 ' + data.len.toString() + '/' + data.size.toString() + '개의 토렌트 정보를 저장 중</em>'
+            );
+        } else {
+            $('#clear_cache_btn').parent().next().html(
+                '<em>캐시 현황을 가져오는데 문제가 있습니다: ' + data.log + '</em>'
+            );
+        }
+    }
+
+    // clear_cache 버튼
+    $("body").on('click', '#clear_cache_btn', function(e) {
+        e.preventDefault();
+        $.ajax({
+            url: '/' + package_name + '/ajax/cache',
+            type: "POST",
+            cache: false,
+            dataType: "json",
+            data: {clear: true, new_size: document.getElementById("cache_size").value},
+            success: function(data) {
+                update_cache_status(data);
+            }
+        });
+    });
+
 </script>
 
 {% endblock %}
