--- a/templates/torrent_info_torrent.html
+++ b/templates/torrent_info_torrent.html
@@ -1,44 +1,54 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="mt-3">
-  토렌트 파일
-</div>
+<div class="mt-3">토렌트 파일</div>
 
 <form>
   <div class="custom-file mt-2">
     <input type="file" accept=".torrent" class="custom-file-input" id="customFile">
     <label class="custom-file-label" for="customFile"></label>
   </div>
-  <button id="get_info_local_btn" name="get_info_local_btn" class="btn btn-sm btn-outline-success mt-2 mb-1">정보 가져오기</button>
+  <button id="get_info_local_btn" name="get_info_local_btn" class="btn btn-sm btn-outline-success mt-2 mb-1">가져오기</button>
 </form>
 
-<form>
+<form id="results-before">
     <div class="form-group mt-3 mb-2">
         <label for="torrent_url">웹 주소</label>
         <input type="url" class="form-control" id="torrent_url" aria-describedby="urlhelp" placeholder="">
         <small id="urlhelp" class="form-text text-muted">http로 시작하는 주소를 입력하세요.</small>
     </div>
-    <button id="get_info_url_btn" name="get_info_url_btn" class="btn btn-sm btn-outline-success mb-1">정보 가져오기</button>
+    <button id="get_info_url_btn" name="get_info_url_btn" class="btn btn-sm btn-outline-success mb-1">가져오기</button>
 </form>
-
-<div id="summary_card" class="card mt-3 mb-3">
-    <div class="card-header">토렌트 정보
-        <a href="#" id="torrent_file" class="card-link ml-2"></a>
-    </div>
-    <div class="card-body">
-        <div class="collapse" id="div_torrent_info"></div>
-    </div>
-</div>
-</div> <!--전체-->
-
-
+<!--전체-->
 
 
 <script type="text/javascript">
-  var package_name = 'torrent_info';
-  {# var current_file = null; #}
-  var current_info = null;
+    var package_name = 'torrent_info';
+    var current_info = null;
+    const result_li_div = '<div class="card mt-3 mb-3" id="results-li"></div>';
+
+    $(document).ready(function() {
+
+        $(function() {
+            $.ajax({
+                url: '/' + package_name + '/api/cached_info',
+                type: "POST",
+                cache: false,
+                data: {},
+                dataType: "json",
+                success: function(data) {
+                    if (data.success) {
+                        if (data.info.length) {
+                            data.info.forEach(function(element){ 
+                                update_single_result(element, false); 
+                            });
+                        }
+                    }
+                }
+            });
+        });
+
+    });
   
   $(".custom-file-input").on("change", function() {
     var fileName = $(this).val().split("\\").pop();
@@ -65,8 +75,7 @@
           contentType: false,
           success: function(data) {
               if (data.success) {
-                  current_info = data.info;
-                  show_info(data.info);
+                  update_single_result(data.info);
               } else {
                   $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
                       type: 'warning'
@@ -95,8 +104,7 @@
             dataType: "json",
             success: function(data) {
                 if (data.success) {
-                    current_info = data.info;
-                    show_info(data.info);
+                    update_single_result(data.info);
                 } else {
                     $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
                         type: 'warning'
@@ -106,14 +114,60 @@
         });
     });
 
-  function show_info(data) {
-      // make a link to torrent_file
-      document.getElementById("torrent_file").innerHTML = data.name + '.torrent';
-      $('#torrent_file').prop('href', '/' + package_name + '/api/download_torrent?hash=' + data.info_hash);
-      // torrent_info
-      document.getElementById("div_torrent_info").innerHTML = "<pre>" + JSON.stringify(data, null, 2) + "</pre>";
-      $('#div_torrent_info').collapse('show');
-  }
+
+    function update_single_result(data, show_info=true) {
+        let torrent_file_name = data.name + '.torrent';
+        let torrent_file_href = data.info_hash;
+        let etime = ("time_metadata" in data) ? data.time_metadata : null;
+        if ( !etime ) etime += Number(("time_scrape" in data) ? data.time_scrape : 0);
+        str = `                
+        <div class="card-header" id="item-header">
+            <div class="d-flex w-100 justify-content-between">
+                <h7 class="text-truncate" style="flex: 1;">
+                    <a href="${torrent_file_href}" id="torrent_file">${torrent_file_name}</a>
+                </h7>
+                <small text-muted>${etime ? etime.toFixed(3) : '-'} 초</small>
+            </div>
+        </div>
+        <ul class="list-group list-group-flush collapse${show_info ? ' show' : ''}">
+            <li class="list-group-item">
+                <pre>${JSON.stringify(data, null, 2)}</pre>
+            </li>
+        </ul>
+        `
+        if (!$("#results-li").length) {
+            $("#results-before").after(result_li_div);
+        }
+        $("#results-li").prepend(str);
+    }
+    
+    $("body").on('click', '#item-header', function(e) {
+        {# $(this).next('ul').children('li').toggle(); #}
+        $(this).next('ul').toggle();
+    });
+
+    $("body").on('click', '#torrent_file', function(e) {
+        e.preventDefault();
+        e.stopPropagation();
+        $.ajax({
+            url: '/' + package_name + '/api/download_torrent',
+            type: "POST",
+            cache: false,
+            data: {
+                hash: $(this).attr('href')
+            },
+            dataType: "json",
+            success: function(data) {
+                if (data.success) {
+                    window.location = data.download_url;
+                } else {
+                    $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
+                        type: 'warning'
+                    });
+                }
+            }
+        });
+    })
     
 </script>
 
