--- a/templates/torrent_info_search.html
+++ b/templates/torrent_info_search.html
@@ -1,21 +1,20 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
-<div class="mt-3">토렌트 파일</div>
+<div class="mt-3">토렌트 파일 정보</div>
 
 <form>
   <div class="custom-file mt-2">
     <input type="file" accept=".torrent" class="custom-file-input" id="customFile">
     <label class="custom-file-label" for="customFile"></label>
   </div>
-  <button id="get_info_local_btn" name="get_info_local_btn" class="btn btn-sm btn-outline-success mt-2 mb-1">가져오기</button>
+  <button id="get_info_file_btn" name="get_info_file_btn" class="btn btn-sm btn-outline-success mt-2 mb-1">가져오기</button>
 </form>
 
 <form id="results-before">
-    <div class="form-group mt-3 mb-2">
-        <label for="torrent_url">웹 주소</label>
-        <input type="url" class="form-control" id="torrent_url" aria-describedby="urlhelp" placeholder="">
-        <small id="urlhelp" class="form-text text-muted">http로 시작하는 주소를 입력하세요.</small>
+    <div class="form-group mt-3">
+        <label for="uri_url">마그넷 혹은 웹에 있는 토렌트 주소</label>
+        <input type="url" class="form-control" id="uri_url" aria-describedby="urlhelp" placeholder="">
+        <small id="urlhelp" class="form-text text-muted">http나 magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요. 없으면 마그넷 해쉬값으로 간주.</small>
     </div>
     <button id="get_info_url_btn" name="get_info_url_btn" class="btn btn-sm btn-outline-success mb-1">가져오기</button>
 </form>
@@ -43,6 +42,7 @@
 </style>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 <script type="text/javascript">
     var package_name = 'torrent_info';
@@ -73,50 +73,82 @@
 
     });
   
-  $(".custom-file-input").on("change", function() {
-    var fileName = $(this).val().split("\\").pop();
-    $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
-  });
+    $(".custom-file-input").on("change", function() {
+        var fileName = $(this).val().split("\\").pop();
+        $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+    });
 
-  $("body").on('click', '#get_info_local_btn', function(e) {
-      e.preventDefault();
-      var current_file = $('#customFile').prop('files')[0];
-      if (jQuery.isEmptyObject(current_file)) {
-          $.notify('<strong>파일을 첨부해 주세요!</strong>', {
-              type: 'warning'
-          });
-          return;
-      }
-      var form_data = new FormData();
-      form_data.append('file',current_file);
-      $.ajax({
-          url: '/' + package_name + '/api/from_file',
-          type: "POST",
-          cache: false,
-          data: form_data,
-          processData: false,
-          contentType: false,
-          success: function(data) {
-              if (data.success) {
-                  render_single_item(data.info);
-              } else {
-                  $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
-                      type: 'warning'
-                  });
-              }
-          }
-      });
-  });
-
-    $("body").on('click', '#get_info_url_btn', function(e) {
+    $("body").on('click', '#get_info_file_btn', function(e) {
         e.preventDefault();
-        torrent_url = document.getElementById("torrent_url").value;
-        if (!torrent_url.startsWith("http")) {
-            $.notify('<strong>올바른 토렌트 주소를 입력하세요!</strong>', {
+        var current_file = $('#customFile').prop('files')[0];
+        if (jQuery.isEmptyObject(current_file)) {
+            $.notify('<strong>파일을 첨부해 주세요!</strong>', {
                 type: 'warning'
             });
             return;
         }
+        var form_data = new FormData();
+        form_data.append('file',current_file);
+        $.ajax({
+            url: '/' + package_name + '/api/from_file',
+            type: "POST",
+            cache: false,
+            data: form_data,
+            processData: false,
+            contentType: false,
+            success: function(data) {
+                if (data.success) {
+                    render_single_item(data.info);
+                } else {
+                    $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
+                        type: 'warning'
+                    });
+                }
+            }
+        });
+    });
+
+    $("body").on('click', '#get_info_url_btn', function(e) {
+        e.preventDefault();
+        uri_url = document.getElementById("uri_url").value;
+        if (!uri_url) {
+            $.notify('<strong>올바른 주소를 입력하세요!</strong>', {
+                type: 'warning'
+            });
+            return;
+        } else if (uri_url.startsWith("magnet:?xt=urn:btih:")) {
+            get_magnet_info(uri_url);
+        } else if (uri_url.startsWith("http")) {
+            get_url_info(uri_url);
+        } else {
+            uri_url = "magnet:?xt=urn:btih:" + uri_url;
+            $("#uri_url").val(uri_url);
+            get_magnet_info(uri_url);
+        }
+    });
+
+    function get_magnet_info(magnet_uri) {
+        $.ajax({
+            url: '/' + package_name + '/api/from_magnet',
+            type: "POST",
+            cache: false,
+            data: {
+                magnet_uri: magnet_uri
+            },
+            dataType: "json",
+            success: function(data) {
+                if (data.success) {
+                    render_single_item(data.info);
+                } else {
+                    $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
+                        type: 'warning'
+                    });
+                }
+            }
+        });
+    }
+
+    function get_url_info(torrent_url) {        
         $.ajax({
             url: '/' + package_name + '/api/from_url',
             type: "POST",
@@ -135,7 +167,7 @@
                 }
             }
         });
-    });
+    }
 
     function render_single_item(data, show_info=true) {
         let torrent_file_name = data.name + '.torrent';
@@ -233,7 +265,6 @@
         } while(Math.abs(bytes) >= thresh && u < units.length - 1);
         return _with ? bytes.toFixed(2)+' '+units[u] : parseFloat(bytes.toFixed(2));
     }
-
     
     $("body").on('click', '#item-header', function(e) {
         $(this).next('ul').toggle();
@@ -275,7 +306,6 @@
             type: 'success'
         });
     });
-    
 
 </script>
 
