--- a/templates/torrent_info_search.html
+++ b/templates/torrent_info_search.html
@@ -14,7 +14,7 @@
     <div class="form-group mt-3">
         <label for="uri_url">마그넷 혹은 웹에 있는 토렌트 주소</label>
         <input type="url" class="form-control" id="uri_url" aria-describedby="urlhelp" placeholder="">
-        <small id="urlhelp" class="form-text text-muted">http나 magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요. 없으면 마그넷 해쉬값으로 간주.</small>
+        <small id="urlhelp" class="form-text text-muted">http나 magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요. 없으면 마그넷 해쉬값으로 간주</small>
     </div>
     <button id="get_info_url_btn" name="get_info_url_btn" class="btn btn-sm btn-outline-success mb-1">가져오기</button>
 </form>
