--- a/templates/torrent_info_search.html
+++ b/templates/torrent_info_search.html
@@ -14,7 +14,7 @@
     <div class="form-group mt-3">
         <label for="uri_url">마그넷 혹은 웹에 있는 토렌트 주소</label>
         <input type="url" class="form-control" id="uri_url" aria-describedby="urlhelp" placeholder="">
-        <small id="urlhelp" class="form-text text-muted">http나 magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요. 없으면 마그넷 해쉬값으로 간주</small>
+        <small id="urlhelp" class="form-text text-muted">http나 magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요. 그렇지 않으면 마그넷 해쉬값으로 간주</small>
     </div>
     <button id="get_info_url_btn" name="get_info_url_btn" class="btn btn-sm btn-outline-success mb-1">가져오기</button>
 </form>
@@ -202,7 +202,7 @@
         ${(data.num_files > 1) ? `<tr><th>파일 리스트</th><td style="padding:0 !important;">${make_filelist(data.files, data.name + '/')}</td></th></tr>` : '' }
         <tr><th>조각 수</th><td>${data.num_pieces}</td></th></tr>
         <tr><th>해쉬값</th><td>${data.info_hash}<button id="clicktocopy" class="btn btn-sm btn-light ml-2"><i class="fa fa-copy"></i></button></td></th></tr>
-        <tr><th>마그넷 주소</th><td>${data.magnet_uri}<button id="clicktocopy" class="btn btn-sm btn-light ml-2"><i class="fa fa-copy"></i></button></td></th></tr>
+        <tr><th>마그넷 주소</th><td><span class="d-inline-block text-truncate" style="max-width: 60ch;">${data.magnet_uri}</span><button id="clicktocopy" class="btn btn-sm btn-light ml-2"><i class="fa fa-copy"></i></button></td></th></tr>
         ${(data.hasOwnProperty('seeders')) ? `<tr><th>시더 수</th><td>${data.seeders}</td></th></tr>` : ''}
         ${(data.hasOwnProperty('peers')) ? `<tr><th>피어 수</th><td>${data.peers}</td></th></tr>` : ''}
         ${(data.hasOwnProperty('trackers')) ? `<tr><th>트래커</th><td>${make_trackerlist(data.trackers)}</td></th></tr>` : ''}
@@ -278,7 +278,7 @@
             type: "POST",
             cache: false,
             data: {
-                hash: $(this).attr('href')
+                info_hash: $(this).attr('href')
             },
             dataType: "json",
             success: function(data) {
@@ -294,7 +294,10 @@
     })
     
     $("body").on('click', '#clicktocopy', function(e) {
-        txt2copy = this.previousSibling.nodeValue;
+        let txt2copy = this.previousSibling.nodeValue;
+        if (txt2copy == null) {
+            txt2copy = $(this).prev('span').text();
+        }
 
         var $tempElement = $("<input>");
         $("body").append($tempElement);
