--- a/templates/torrent_info_setting.html
+++ b/templates/torrent_info_setting.html
@@ -12,7 +12,7 @@
         {{ macros.m_tab_content_start('일반', true) }}
         <form id="setting" name="setting">
             {{ macros.setting_button_with_info([['install_btn', '설치하기']], 'libtorrent 설치', 'x86_64 alpine 도커만 지원. 네이티브라면 직접 설치 후 새로고침 해 보세요.') }}
-            {{ macros.setting_checkbox('use_dht', 'DHT 사용', value=arg['use_dht'], desc='트래커 없이도 정보를 받아오지만 iknowwhatyoudownload.com에 노출될 수 있습니다.') }}
+            {{ macros.setting_checkbox('use_dht', 'DHT 사용', value=arg['use_dht'], desc='테스트 결과 iknowwhatyoudownload.com에 노출되지 않음을 확인했습니다. 켜는 것을 권장합니다.') }}
             {{ macros.setting_checkbox('scrape', 'Scrape 사용', value=arg['scrape'], desc='피어 정보도 받아옵니다. 활성 토렌트인지 확인할 때 유용. 대신 오래 걸림.') }}
             {{ macros.setting_input_int('timeout', '대기 시간', value=arg['timeout'], min='1', placeholder='30', desc='마그넷 정보를 받아올때 너무 오래 걸리면 중지합니다. 단위: 초') }}
             {{ macros.setting_input_int('cache_size', '검색 결과 저장', value=arg['cache_size'], min='0', max='256', placeholder='10', desc='최근 검색 결과를 info_hash 기준으로 저장합니다. 단위: 갯수') }}
