--- a/templates/torrent_info_search.html
+++ b/templates/torrent_info_search.html
@@ -11,7 +11,7 @@
 </form>
 
 <form id="results-before">
-    <div class="form-group mt-3">
+    <div class="form-group mt-3 mb-2">
         <label for="uri_url">마그넷 혹은 웹에 있는 토렌트 주소</label>
         <input type="url" class="form-control" id="uri_url" aria-describedby="urlhelp" placeholder="">
         <small id="urlhelp" class="form-text text-muted">http나 magnet:?xt=urn:btih:로 시작하는 주소를 입력하세요. 그렇지 않으면 마그넷 해쉬값으로 간주</small>
@@ -53,7 +53,7 @@
 
         $(function() {
             $.ajax({
-                url: '/' + package_name + '/api/from_cache',
+                url: '/' + package_name + '/ajax/cache',
                 type: "POST",
                 cache: false,
                 data: {},
@@ -89,7 +89,7 @@
         var form_data = new FormData();
         form_data.append('file',current_file);
         $.ajax({
-            url: '/' + package_name + '/api/from_file',
+            url: '/' + package_name + '/ajax/get_file_info',
             type: "POST",
             cache: false,
             data: form_data,
@@ -116,44 +116,23 @@
             });
             return;
         } else if (uri_url.startsWith("magnet:?xt=urn:btih:")) {
-            get_magnet_info(uri_url);
+            get_torrent_info(uri_url);
         } else if (uri_url.startsWith("http")) {
-            get_url_info(uri_url);
+            get_torrent_info(uri_url);
         } else {
             uri_url = "magnet:?xt=urn:btih:" + uri_url;
             $("#uri_url").val(uri_url);
-            get_magnet_info(uri_url);
+            get_torrent_info(uri_url);
         }
     });
 
-    function get_magnet_info(magnet_uri) {
+    function get_torrent_info(uri_url) {
         $.ajax({
-            url: '/' + package_name + '/api/from_magnet',
+            url: '/' + package_name + '/ajax/get_torrent_info',
             type: "POST",
             cache: false,
             data: {
-                magnet_uri: magnet_uri
-            },
-            dataType: "json",
-            success: function(data) {
-                if (data.success) {
-                    render_single_item(data.info);
-                } else {
-                    $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
-                        type: 'warning'
-                    });
-                }
-            }
-        });
-    }
-
-    function get_url_info(torrent_url) {        
-        $.ajax({
-            url: '/' + package_name + '/api/from_url',
-            type: "POST",
-            cache: false,
-            data: {
-                torrent_url: torrent_url
+                uri_url: uri_url
             },
             dataType: "json",
             success: function(data) {
@@ -169,14 +148,14 @@
     }
 
     function render_single_item(data, show_info=true) {
-        let torrent_file_name = data.name + '.torrent';
-        let torrent_file_href = data.info_hash;
+        let torrent_file_name = data.name;
+        let torrent_file_href = data.magnet_uri;
         let etime = ("time" in data) ? data.time.total.toFixed(3) + ' 초' : '';
         str = `
         <div class="card-header" id="item-header">
             <div class="d-flex w-100 justify-content-between">
                 <h7 class="text-truncate" style="flex: 1;">
-                    <a href="${torrent_file_href}" id="torrent_file">${torrent_file_name}</a>
+                    <a href="${torrent_file_href}" target="_blank" id="torrent_file">${torrent_file_name}</a>
                 </h7>
                 <small text-muted>${etime}</small>
             </div>
@@ -253,26 +232,7 @@
     });
 
     $("body").on('click', '#torrent_file', function(e) {
-        e.preventDefault();
         e.stopPropagation();
-        $.ajax({
-            url: '/' + package_name + '/api/download_torrent',
-            type: "POST",
-            cache: false,
-            data: {
-                info_hash: $(this).attr('href')
-            },
-            dataType: "json",
-            success: function(data) {
-                if (data.success) {
-                    window.location = data.download_url;
-                } else {
-                    $.notify('<strong>실패하였습니다!!!</strong><br>' + data.log, {
-                        type: 'warning'
-                    });
-                }
-            }
-        });
     })
     
     $("body").on('click', '#clicktocopy', function(e) {
