--- a/templates/torrent_info_setting.html
+++ b/templates/torrent_info_setting.html
@@ -8,7 +8,7 @@
             {{ macros.m_tab_head('기타', false) }} 
         {{ macros.m_tab_head_end() }}
     </nav>
-    <div class="tab-content" id="nav-tabContent">
+    <div class="tab-content mb-3" id="nav-tabContent">
         <!-- 일반 -->
         {{ macros.m_tab_content_start('일반', true) }}
         <form id="setting" name="setting">
@@ -34,9 +34,11 @@
         {{ macros.m_tab_content_start('기타', false) }}
         {{ macros.info_text('plugin_ver', left='플러그인 버전', value=arg['plugin_ver']) }}
         {{ macros.setting_button_with_info([['install_btn', '설치하기']], 'libtorrent 설치', 'x86_64 alpine 도커만 지원. 네이티브라면 직접 설치 후 새로고침 해 보세요.') }}
-        {{ macros.setting_button_with_info([['clear_cache_btn', '재설정']], '검색 결과 비우기', '') }}        
-        {{ macros.m_tab_content_end() }}
+        {{ macros.setting_button_with_info([['clear_cache_btn', '재설정']], '검색 결과 비우기', '') }}
+        {{ macros.m_hr() }}
+        {{ macros.info_text_go('json_api', 'JSON API', value=arg['api_url_base']+'/json', desc=['', '파라미터 (둘 중 하나 반드시 입력)', ' - uri: 마그넷 주소. magnet으로 시작하지 않으면 hash로 간주하여 자동완성. 인코딩 된 주소 권장', ' - url: 웹에 있는 토렌트 파일 주소. SJVA에서 접근할 수 있어야 함.']) }}
 
+        {{ macros.m_tab_content_end() }}
     </div>
     <!--tab-content-->
 </div>
@@ -109,7 +111,7 @@
     function update_cache_status(data) {
         if (data.success) {
             $('#clear_cache_btn').parent().next().html(
-                '<em>현재 ' + data.len.toString() + '개의 토렌트 정보를 저장 중</em>'
+                '<em>현재 ' + data.info.length.toString() + '개의 토렌트 정보를 저장 중</em>'
             );
         } else {
             $('#clear_cache_btn').parent().next().html(
