--- a/templates/torrent_info_setting.html
+++ b/templates/torrent_info_setting.html
@@ -37,6 +37,8 @@
         {{ macros.setting_button_with_info([['clear_cache_btn', '재설정']], '검색 결과 비우기', '') }}
         {{ macros.m_hr() }}
         {{ macros.info_text_go('json_api', 'JSON API', value=arg['json_api'], desc=['', '파라미터 (둘 중 하나 반드시 입력)', ' - uri: 마그넷 주소. magnet으로 시작하지 않으면 hash로 간주하여 자동완성. 인코딩 된 주소 권장', ' - url: 웹에 있는 토렌트 파일 주소. SJVA에서 접근할 수 있어야 함.']) }}
+        {{ macros.m_hr() }}
+        {{ macros.info_text_go('m2t_api', 'MAGNET2TORRENT API', value=arg['m2t_api'], desc=['', '파라미터 (GET만 허용)', ' - uri: 마그넷 주소. magnet으로 시작하지 않으면 hash로 간주하여 자동완성. 인코딩 된 주소 권장']) }}
 
         {{ macros.m_tab_content_end() }}
     </div>
